--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ iframe#myVideo {
   }
 
   iframe#myVideo {
-    border: 1px solid black;
+    border: 0px;
   }
 }
 
@@ -25,6 +25,6 @@ iframe#myVideo {
   }
 
   iframe#myVideo {
-    border: 1px solid black;
+      border: 0px;
   }
 }
